Adding corollary to some PPU levels. Supporting automatic corollary after unit tests

--- a/src/data/levels/05b_PPU/08_VRAM bridge/chat/en.yml
+++ b/src/data/levels/05b_PPU/08_VRAM bridge/chat/en.yml
@@ -69,3 +69,11 @@ increment:
   - this autoincrement is useful for games to fill VRAM faster
   responses:
   - ...exercise
+
+corollary:
+  messages:
+  - now, try running a game that uses 👾  CHR-RAM, like 🕊️ 🛰️  ~Spacegulls~
+  - you are now able to see its first 🕊️ 📖  pattern table!
+  - these tiles are copied by the game code via 📍  PPUAddr and 📦  PPUData
+  responses:
+  - ▶️  continue [end]
