--- a/src/data/levels/05b_PPU/09_Backgrounds 1-2 - Drawing Name tables/chat/es.yml
+++ b/src/data/levels/05b_PPU/09_Backgrounds 1-2 - Drawing Name tables/chat/es.yml
@@ -94,3 +94,10 @@ work:
   - y compara la salida alternando entre BrokenNEEES y tu emulador ✨
   responses:
   - ...questions
+
+corollary:
+  messages:
+  - ¡¡esto es increíble!!
+  - ¡tu emulador ahora debería poder mostrar la pantalla de título de la mayoría de los juegos! 🎉
+  responses:
+  - ▶️  continuar [end]
