--- a/src/data/levels/05b_PPU/17_Sprites 5-6 - Priorities/chat/en.yml
+++ b/src/data/levels/05b_PPU/17_Sprites 5-6 - Priorities/chat/en.yml
@@ -72,3 +72,9 @@ exercise:
             **->** if ```javascript isInFront || !isBGOpaque```:
               **->** call ```javascript this.ppu.plot(element.x, y, element.color);```
   responses: []
+
+corollary:
+  messages:
+  - if you run 🦸 🤸  ~Super Tilt Bro~, you'll see that now the clouds render properly 🙂
+  responses:
+  - ▶️  continue [end]
