--- a/src/data/levels/✨_Let's play/13_Falling/chat/en.yml
+++ b/src/data/levels/✨_Let's play/13_Falling/chat/en.yml
@@ -9,7 +9,7 @@ main:
   - |-
     it's called 🙌 ☁️  ~Falling~
     <{screenshot.png;30x30}>
-  - an simple <endless faller> game where you dodge obstacles and pick up collectibles
+  - a simple <endless faller> game where you dodge obstacles and pick up collectibles
   - if you complete it, I'll send you the <ROM file>
   - in the ~*.neees~ format
   responses:
