--- a/src/data/levels/05b_PPU/10_Backgrounds 2-2 - Using Attribute tables/chat/es.yml
+++ b/src/data/levels/05b_PPU/10_Backgrounds 2-2 - Using Attribute tables/chat/es.yml
@@ -21,11 +21,11 @@ main:
         (puedes importar y usar 📄  ~/lib/ppu/masterPalette.js~ para la lista de colores)
   - |-
     📚  implementa este método en 🏞️  `BackgroundRenderer`:
-    **_getPaletteId(nameTableId, x, y)**:
+    **_getBackgroundPaletteId(nameTableId, x, y)**:
       **->** <agrega el código necesario> para devolver el id de paleta correcto para el píxel ~(x, y)~
       **->** sigue 📄  ~/docs/ppu/background_rendering.es.md~ para orientación sobre cómo se codifican los ids de paletas
   - |-
-    📚  cambia `BackgroundRenderer::renderScanline()` para que use `_getPaletteId(...)` y dibuje el color correcto, así:
+    📚  cambia `BackgroundRenderer::renderScanline()` para que use `_getBackgroundPaletteId(...)` y dibuje el color correcto, así:
       ```javascript
       const paletteId = this._getBackgroundPaletteId(nameTableId, x, y);
 
