--- a/src/data/levels/05c_APU/08_Pulse Channels 3-5 - Length counter/chat/es.yml
+++ b/src/data/levels/05c_APU/08_Pulse Channels 3-5 - Length counter/chat/es.yml
@@ -19,9 +19,9 @@ length:
   - luego ese valor se reduce cada half frame
   - ¡y cuando llega a 0, el canal se silencia! 🤐
   responses:
-  - (k) ¿cómo cargaría su valor un juego? [load]
-  - (k) ¿siempre reduce su valor en los half frames? [decrement]
-  - (l) vamos a programarlo [exercise]
+  - (*) ¿cómo cargaría su valor un juego? [load]
+  - (*) ¿siempre reduce su valor en los half frames? [decrement]
+  - vamos a programarlo [exercise]
 
 load:
   messages:
