--- a/src/data/levels/05a_CPU/11_Instructions (5-5) - System/chat/es.yml
+++ b/src/data/levels/05a_CPU/11_Instructions (5-5) - System/chat/es.yml
@@ -26,10 +26,11 @@ example:
   messages:
   - ¡sí! imagina que eres un juego
   - necesitas mover tus sprites cuando la PPU termina de renderizar su frame actual, para evitar hacerlo mientras está dibujando (causando glitches 💥 )
-  - así que, pones tu código que mueve sprites en -por ejemplo- la dirección $90CC
+  - así que, pones tu código que mueve sprites en -por ejemplo- la dirección $AA00
   - esa será la ubicación de tu <manejador de interrupciones>
-  - y luego te "suscribes" al evento NMI poniendo un puntero a $90CC en el vector de NMI (que es ~$FFFA/B~)
-  - (en Little Endian, por lo que $FFFA guarda $CC y $FFFB guarda $90)
+  - y luego te "suscribes" al evento NMI poniendo un puntero a $AA00 en el vector de NMI (que es ~$FFFA/B~)
+  - (en Little Endian, por lo que $FFFA guarda $00 y $FFFB guarda $AA)
+  - revisa 📄  ~/docs/cpu/interrupt_example.md~
   responses:
   - ¿qué pasaría cuando un NMI ocurre? [nmi]
 
@@ -38,8 +39,8 @@ nmi:
   - "en este ejemplo, cuando un NMI es disparado, la CPU:"
   - 🧱  pone [PC] y las banderas en la pila
   - 🏁  asigna ~I=1~, que desactiva las interrupciones del usuario
-  - 🐏  toma el valor $90CC de leer $FFFA y $FFFB (el vector de NMI)
-  - 🦘  salta a $90CC
+  - 🐏  toma el valor $AA00 de leer $FFFA y $FFFB (el vector de NMI)
+  - 🦘  salta a $AA00
   - 🚲  consume 7 ciclos haciendo todo esto
   - luego, el manejador de interrupciones moverá los sprites y ejecutará `RTI` ("Return from Interrupt") para restaurar el estado anterior
   responses:
