--- a/src/data/levels/05b_PPU/21_Scrolling 1-2 - The Wrong Way/chat/en.yml
+++ b/src/data/levels/05b_PPU/21_Scrolling 1-2 - The Wrong Way/chat/en.yml
@@ -18,6 +18,8 @@ plan:
   - sounds good, how does scrolling work? [good]
 
 good:
+  run: |
+    {{Top}}.load("scrolling.gif");
   messages:
   - well, the games don't actually move <the background>
   - they move an imaginary viewport against the static background
@@ -65,6 +67,8 @@ long:
   - enough talk, how do we proceed? [exercise]
 
 exercise:
+  run: |
+    {{Top}}.load(null, "rom");
   messages:
   - (again, ~THIS IS NOT EXACTLY CORRECT~, but it'll work for now!)
   - |-
